2007-04-09  Richard Dale  <rdale@foton.es>

	* Added marshallers for some of the new Qt 4.3 list types

2007-04-08  Richard Dale  <rdale@foton.es>

	* Improved the code to only generate C# properties instead of normal
	  method calls. Only generate code for the Read and write methods of
	  the property if they are slots, signals or virtual methods.
	* Fixed the uics tool to generate code that compiles with the above
	  change.

2007-04-08  Arno Rehn  <arno@arnorehn.de>

	* Renamed all QAbstract*Helper classes to QAbstract*Internal and
	  marked them as internal, so they cannot be accessed from outside
	  the assembly.

2007-04-06  Richard Dale  <rdale@foton.es>

	* Fixed all compiler warnings in the generated code, except for 180 
	  warnings about the smokeObject private variable not being used.

2007-04-06  Arno Rehn  <arno@arnorehn.de>

	* Added missing QItemModel.cs. Forgot to do a 'svn add' last time.
	* Added more helper classes for abstract base classes which are returned by
	  public methods.
	* Fixed little bug in qdbus/chat/chat.cs.

2007-04-06  Richard Dale  <rdale@foton.es>

	* Improved the code generation to fix some of the many warnings, and fixed
	  some compiler warnings in the Qyoto runtime code too.
	* Added a MonoDevelop project for the Qyoto source files

2007-04-05  Richard Dale  <rdale@foton.es>

	* Regenerated the Qyoto classes from the Qt 4.3 headers, and added new 
	  classes
	* The test for instance operator methods was changing 'operator>>' and
	  'operator<<' calls from static to instance methods, when they are
	  actually still instance methods 'Read()' and 'Write()' in C#.
	* Add some marshallers for the QVector types in the new QXmlStream*
	  classes

2007-04-03  Richard Dale  <rdale@foton.es>

	* No need to special case the metaObject() method any more when caching 
	  smoke method ids
	* After a smoke method has been called, free the GCHandle for the instance
	  on the C# side

2007-04-02  Arno Rehn  <arno@arnorehn.de>
